--- a/client/package.json
+++ b/client/package.json
@@ -26,5 +26,10 @@
   "dependencies": {
     "code-mirror-themes": "^1.0.0",
     "idb": "^6.1.2"
-  }
+  },
+  "version": "1.0.0",
+  "main": "src-sw.js",
+  "keywords": [],
+  "description": ""
 }
+
